# LANchat

./: App.xaml  App.xaml.cs  AppSettings.cs  AppSettingsStruct.cs  ArgumentProcessor.cs  CMakeLists.txt  ConnectionDialog.xaml  ConnectionDialog.xaml.cs  ExceptionDialog.xaml  ExceptionDialog.xaml.cs  FileManager.cs  GlobalDefs.cs  LANchat.csproj  LANchat.sln  MainWindow.xaml  MainWindow.xaml.cs  README.md  SettingsDialog.xaml  SettingsDialog.xaml.cs  main.cpp
Connection/: AbstractTcpPacket.cs  Client.cs  InformationPacket.cs  MessagePacket.cs  RequestPacket.cs
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
app/: appsettings.cpp  appsettings.h  exceptions.cpp  exceptions.h  filemanager.h  noguimode.cpp  noguimode.h
connection/: abstracttypes.cpp  abstracttypes.h  client.cpp  client.h  informationpacket.cpp  informationpacket.h  messagepacket.cpp  messagepacket.h  messagetimepair.h  requestpacket.cpp  requestpacket.h
src/: argumentprocessor.cpp  argumentprocessor.h  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  globaldefs.cpp  globaldefs.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
